--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
+    "primeicons": "^6.0.1",
     "primereact": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
