--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.2",
     "react": "^18.2.0",
